--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
                 <h3 class="project-name">PizzaHut</h3>
             </a>
         </div>
+        <div id="cultcrew" class="project-tile">
+            <a href="https://codepen.io/mackenzieweaver/pen/xxZQWjK" class="project-link" target="_blank" 
+                rel="noopener noreferrer">
+                <img class="project-img" src="/cultcrew.png" alt="" >
+                <h3 class="project-name">Cult Crew</h3>
+            </a>
+        </div>
     </section>
     <section id="contact">
         <h1>Let's work together...</h1>
