--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="technical_documentation_page" class="project-tile">
             <a class="project-link" href="https://codepen.io/mackenzieweaver/full/GRoGRyz" target="_blank"
                 rel="noopener noreferrer">
-                <img class="project-img" src="/technical documentation.png" alt="">
+                <img class="project-img" src="./technical documentation.png" alt="">
                 <h3 class="project-name">Technical Documentation Page</h3>
                 <!-- <p class="description">A resource for learning the basics of Javascript</p> -->
             </a>
