--- a/index.html
+++ b/index.html
@@ -40,35 +40,35 @@
         <div id="survey_form" class="project-tile">
             <a class="project-link" href="https://codepen.io/mackenzieweaver/full/pogLqaZ" target="_blank"
                 rel="noopener noreferrer">
-                <img class="project-img" src="/surveyform.png" alt="">
+                <img class="project-img" src="surveyform.png" alt="">
                 <h3 class="project-name">Survey Form</h3>
             </a>
         </div>
         <div id="product_landing_page" class="project-tile">
             <a class="project-link" href="https://codepen.io/mackenzieweaver/full/eYJrGjN" target="_blank"
                 rel="noopener noreferrer">
-                <img class="project-img" src="/product landing page.png" alt="">
+                <img class="project-img" src="product landing page.png" alt="">
                 <h3 class="project-name">Product Landing Page</h3>
             </a>
         </div>
         <div id="portfolio" class="project-tile">
             <a class="project-link" href="https://codepen.io/mackenzieweaver/full/OJMwXBq" target="_blank"
                 rel="noopener noreferrer">
-                <img class="project-img" src="/thiswebsite.png" alt="">
+                <img class="project-img" src="thiswebsite.png" alt="">
                 <h3 class="project-name">Portfolio</h3>
             </a>
         </div>
         <div id="pizzahut" class="project-tile">
             <a class="project-link" href="https://codepen.io/mackenzieweaver/pen/dyGjEyB" target="_blank"
                 rel="noopener noreferrer">
-                <img class="project-img" src="/pizzahut.png" alt="">
+                <img class="project-img" src="pizzahut.png" alt="">
                 <h3 class="project-name">PizzaHut</h3>
             </a>
         </div>
         <div id="cultcrew" class="project-tile">
             <a href="https://codepen.io/mackenzieweaver/pen/xxZQWjK" class="project-link" target="_blank" 
                 rel="noopener noreferrer">
-                <img class="project-img" src="/cultcrew.png" alt="" >
+                <img class="project-img" src="cultcrew.png" alt="" >
                 <h3 class="project-name">Cult Crew</h3>
             </a>
         </div>
